refactor: add margin bottom to last day on mobile

--- a/src/components/day-items/styles/day-items.module.scss
+++ b/src/components/day-items/styles/day-items.module.scss
@@ -10,11 +10,19 @@
   padding: 10px;
   width: auto;
 
+  &:last-of-type {
+    margin-bottom: 100px;
+  }
+
   @media screen and (min-width: 768px) {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: auto 1fr;
     text-align: center;
+
+    &:last-of-type {
+      margin-bottom: 20px;
+    }
   }
 
   &__date {
