--- a/src/components/dialog/styles/dialog.module.scss
+++ b/src/components/dialog/styles/dialog.module.scss
@@ -1,22 +1,28 @@
 .dialog {
-  position: absolute;
+  position: fixed;
   top: 0;
-  width: 100%;
-  height: 100vh;
+  left: 0;
   background-color: rgba(238, 236, 236, 0.5);
+  height: 100%;
+  width: 100%;
 
   &__content {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
     background-color: white;
     border: 2px solid rgb(240, 240, 240);
     border-radius: 12px;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
+    box-sizing: border-box;
+    flex-direction: column;
+    justify-content: center;
     margin: 50% 10%;
     padding: 30px;
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+      margin: 30% 30%;
+    }
   }
 
   &__footer {
