--- a/src/components/dialog/styles/dialog.module.scss
+++ b/src/components/dialog/styles/dialog.module.scss
@@ -2,8 +2,12 @@
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  align-items: center;
   background-color: rgba(238, 236, 236, 0.5);
   height: 100%;
+  justify-content: center;
+  overflow: auto;
   width: 100%;
 
   &__content {
@@ -16,13 +20,9 @@
     box-sizing: border-box;
     flex-direction: column;
     justify-content: center;
-    margin: 50% 10%;
+    margin: 0 5%;
     padding: 30px;
     text-align: center;
-
-    @media screen and (min-width: 768px) {
-      margin: 30% 30%;
-    }
   }
 
   &__footer {
