--- a/src/components/loading-spinner/styles/loading-spinner.module.scss
+++ b/src/components/loading-spinner/styles/loading-spinner.module.scss
@@ -1,19 +1,21 @@
+@import "../../../styles/index.scss";
+
 .loading-spinner {
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.77);
+  background-color: get-color("background");
   height: 100%;
   justify-content: center;
   width: 100%;
 
   .spinner {
     animation: spin 1s linear infinite;
-    border: 6px solid rgba(0, 0, 0, 0.1);
+    border: 6px solid get-color("border");
     border-radius: 50%;
-    border-top: 6px solid rgb(236, 89, 53);
+    border-top: 6px solid get-color("secondary");
     height: 50px;
     width: 50px;
   }
