--- a/src/components/day-items/styles/day-items.module.scss
+++ b/src/components/day-items/styles/day-items.module.scss
@@ -1,45 +1,47 @@
+@import "../../../styles/index.scss";
+
 .day-items {
   display: flex;
   align-items: center;
-  border: solid 1px rgb(197, 197, 197);
-  border-radius: 20px;
+  border: solid 1px get-color("border");
+  border-radius: get-border-radius("xl");
   box-sizing: border-box;
   flex-direction: column;
-  gap: 10px;
-  margin: 20px;
-  padding: 10px;
+  gap: get-spacing("m");
+  margin: get-spacing("xl");
+  padding: get-spacing("m");
   width: auto;
 
   &:last-of-type {
-    margin-bottom: 100px;
+    margin-bottom: calc(get-spacing("m") * 10);
   }
 
   @media screen and (min-width: 768px) {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: get-spacing("m");
     grid-template-columns: auto 1fr;
     text-align: center;
 
     &:last-of-type {
-      margin-bottom: 20px;
+      margin-bottom: get-spacing("xl");
     }
   }
 
   &__date {
     display: flex;
     align-items: center;
-    color: rgb(236, 89, 53);
+    color: get-color("secondary");
     flex-direction: column;
     justify-content: center;
-    margin: 10px;
+    margin: get-spacing("m");
 
     @media screen and (min-width: 768px) {
-      margin: 40px;
+      margin: get-spacing("xl");
     }
   }
 
   &__month {
-    margin: 5px 0;
+    margin: get-spacing("xs") 0;
   }
 
   &__day {
@@ -53,29 +55,14 @@
     }
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: get-spacing("m");
 
     @media screen and (min-width: 768px) {
       display: grid;
-      grid-gap: 10px;
+      grid-gap: get-spacing("m");
       grid-template-columns: repeat(3, 1fr);
       justify-content: center;
-      padding: 10px;
-    }
-
-    &-button {
-      background-color: rgb(245, 241, 241);
-      border: none;
-      border-radius: 10px;
-      color: rgb(147, 147, 147);
-      cursor: pointer;
-      font-size: 14px;
-      margin: 10px;
-      padding: 10px;
-
-      &:hover {
-        background-color: rgb(237, 235, 235);
-      }
+      padding: get-spacing("m");
     }
   }
 }
