--- a/src/components/dialog/styles/dialog.module.scss
+++ b/src/components/dialog/styles/dialog.module.scss
@@ -1,10 +1,12 @@
+@import "../../../styles/index.scss";
+
 .dialog {
   position: fixed;
   top: 0;
   left: 0;
   display: flex;
   align-items: center;
-  background-color: rgba(238, 236, 236, 0.5);
+  background-color: get-color("overlay");
   height: 100%;
   justify-content: center;
   overflow: auto;
@@ -13,15 +15,15 @@
   &__content {
     display: flex;
     align-items: center;
-    background-color: white;
-    border: 2px solid rgb(240, 240, 240);
-    border-radius: 12px;
+    background-color: get-color("background");
+    border: 2px solid get-color("border");
+    border-radius: get-border-radius("l");
     box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
     box-sizing: border-box;
     flex-direction: column;
     justify-content: center;
     margin: 0 5%;
-    padding: 30px;
+    padding: get-spacing("xxl");
     text-align: center;
   }
 
